components/homepage.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app: homepage
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: front-end
  selector:
    app: homepage
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: homepage
        tier: frontend
    spec:
      nodeSelector:
        focus: application
      containers:
      - name: homepage
        image: gcr.io/dataworkbench-io/homepage:0.2.0
        imagePullPolicy: Always
        ports:
        - name: front-end
          containerPort: 80
