components/iati-data-validator-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: iati-data-validator-webhook
  labels:
    app: iati-data-validator-webhook
    tier: backend
spec:
  type: NodePort
  ports:
  - name: svc-webhook
    port: 80
    targetPort: webhook-server
  selector:
    app: iati-data-validator-webhook
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: iati-data-validator-webhook
  labels:
    app: iati-data-validator-webhook
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: iati-data-validator-webhook
        tier: backend
    spec:
      containers:
      - name: iati-data-validator-webhook
        image: gcr.io/dataworkbench-io/iati-data-validator:0.9.9-webhook
        imagePullPolicy: Always
        ports:
        - name: webhook-server
          containerPort: 9000
        resources:
          requests:
            memory: "1Gi"
          limits:
            memory: "3Gi"
        readinessProbe:
          httpGet:
            path: /process/get-feedback
            port: 9000
        volumeMounts:
        - mountPath: /workspace
          name: workspace
      volumes:
      - name: workspace
        emptyDir: {}
