components/validator-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: validator-api
  labels:
    app: validator-api
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: api-server
  selector:
    app: validator-api
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: validator-api
  labels:
    app: validator-api
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: validator-api
        tier: frontend
    spec:
      nodeSelector:
        focus: application
      containers:
      - name: validator-api-app
        image: gcr.io/dataworkbench-io/validator-api:0.3.10
        imagePullPolicy: Always
        ports:
        - name: api-server
          containerPort: 8080
