components/validator-front-end.yaml
apiVersion: v1
kind: Service
metadata:
  name: validator-front-end
  labels:
    app: validator-front-end
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: front-end
  selector:
    app: validator-front-end
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: validator-front-end
  labels:
    app: validator-front-end
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: validator-front-end
        tier: frontend
    spec:
      nodeSelector:
        focus: application
      containers:
      - name: validator-front-end
        image: gcr.io/dataworkbench-io/validator-front-end:0.8.7
        imagePullPolicy: Always
        ports:
        - name: front-end
          containerPort: 80
